refactor : refonte de la gestion des null — Java 25
9 fichiers corrigés suite à audit statique :
- GrantedAuthoritiesKeyCloakMapper : filtre null dans stream JWT + .toList()
- CspPolicyBuilder : exception loggée (IllegalArgumentException) + isBlank()
- GlobalExceptionHandler : pattern matching instanceof FieldError + message null-safe
- ErrorResponse : Map.of() au lieu de null dans le constructeur compact
- EmployeResponseDTO : Objects.requireNonNull dans from()
- KeycloakLogoutSuccessHandler : Optional<String> sur deriveLogoutUri/extractIdToken
- EmployeSpecification : échappement métacaractères LIKE (%, _, \)
- Employe : annotations JSpecify @NonNull/@Nullable sur les champs
- EmployeService : annotations @NonNull sur les paramètres id

95 tests unitaires passent sans régression.